// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`shapeAgentControls > is a characterization snapshot for both fill modes 1`] = `
[
  {
    "default": "facets",
    "group": "Form",
    "hint": "facets = per-face colours from the palette; surface = one tiled fill over the whole solid",
    "key": "fillMode",
    "kind": "select",
    "label": "Fill mode",
    "options": [
      "facets",
      "surface",
    ],
  },
  {
    "default": "primitive",
    "group": "Shape",
    "key": "shape.mode",
    "kind": "select",
    "label": "Mode",
    "options": [
      "primitive",
      "gem",
    ],
  },
  {
    "default": "cube",
    "group": "Shape",
    "key": "shape.primitive",
    "kind": "select",
    "label": "Primitive",
    "options": [
      "cube",
      "sphere",
      "cone",
      "cylinder",
      "prism",
      "torus",
      "icosahedron",
      "octahedron",
    ],
  },
  {
    "default": 1,
    "group": "Shape",
    "key": "shape.density",
    "kind": "slider",
    "label": "Density",
    "max": 4,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Shape",
    "key": "shape.jitter",
    "kind": "slider",
    "label": "Jitter",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": 1,
    "group": "Shape",
    "key": "shape.scale",
    "kind": "slider",
    "label": "Scale",
    "max": 3,
    "min": 0.25,
    "step": 0.05,
  },
  {
    "default": "orthographic",
    "group": "Shape",
    "key": "shape.projection",
    "kind": "select",
    "label": "Projection",
    "options": [
      "orthographic",
      "perspective",
    ],
  },
  {
    "default": "analogous",
    "group": "Palette",
    "key": "palette.harmony",
    "kind": "select",
    "label": "Harmony",
    "options": [
      "monochromatic",
      "complementary",
      "split-complementary",
      "analogous",
      "accented-analogous",
      "triadic",
      "tetradic",
      "compound",
    ],
  },
  {
    "default": 287,
    "group": "Palette",
    "key": "palette.baseHue",
    "kind": "slider",
    "label": "Hue",
    "max": 360,
    "min": 0,
    "step": 1,
  },
  {
    "default": 57,
    "group": "Palette",
    "key": "palette.saturation",
    "kind": "slider",
    "label": "Saturation",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": 47,
    "group": "Palette",
    "key": "palette.lightness",
    "kind": "slider",
    "label": "Lightness",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": "prismatic",
    "group": "Palette",
    "key": "palette.coloring",
    "kind": "select",
    "label": "Coloring",
    "options": [
      "prismatic",
      "smooth",
      "faceted",
      "ombre",
      "scatter",
    ],
  },
  {
    "default": "vertical",
    "group": "Palette",
    "key": "palette.direction",
    "kind": "select",
    "label": "Direction",
    "options": [
      "vertical",
      "depth",
      "radial",
      "angular",
    ],
  },
  {
    "default": 20,
    "group": "Style",
    "key": "style.grain",
    "kind": "slider",
    "label": "Grain",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Style",
    "key": "style.distortion",
    "kind": "slider",
    "label": "Distortion",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": "#000000",
    "group": "Style",
    "key": "style.background",
    "kind": "color",
    "label": "Background",
  },
]
`;

exports[`shapeAgentControls > is a characterization snapshot for both fill modes 2`] = `
[
  {
    "default": "facets",
    "group": "Form",
    "hint": "facets = per-face colours from the palette; surface = one tiled fill over the whole solid",
    "key": "fillMode",
    "kind": "select",
    "label": "Fill mode",
    "options": [
      "facets",
      "surface",
    ],
  },
  {
    "default": "primitive",
    "group": "Shape",
    "key": "shape.mode",
    "kind": "select",
    "label": "Mode",
    "options": [
      "primitive",
      "gem",
    ],
  },
  {
    "default": "cube",
    "group": "Shape",
    "key": "shape.primitive",
    "kind": "select",
    "label": "Primitive",
    "options": [
      "cube",
      "sphere",
      "cone",
      "cylinder",
      "prism",
      "torus",
      "icosahedron",
      "octahedron",
    ],
  },
  {
    "default": 1,
    "group": "Shape",
    "key": "shape.density",
    "kind": "slider",
    "label": "Density",
    "max": 4,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Shape",
    "key": "shape.jitter",
    "kind": "slider",
    "label": "Jitter",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": 1,
    "group": "Shape",
    "key": "shape.scale",
    "kind": "slider",
    "label": "Scale",
    "max": 3,
    "min": 0.25,
    "step": 0.05,
  },
  {
    "default": "orthographic",
    "group": "Shape",
    "key": "shape.projection",
    "kind": "select",
    "label": "Projection",
    "options": [
      "orthographic",
      "perspective",
    ],
  },
  {
    "default": "gradient",
    "group": "Fill",
    "key": "fill.type",
    "kind": "select",
    "label": "Fill type",
    "options": [
      "solid",
      "gradient",
      "ombre",
      "grid",
      "noise",
      "checkerboard",
      "stripes",
      "qr",
      "shader",
    ],
  },
  {
    "default": "#ff4da6",
    "group": "Fill",
    "key": "fill.a",
    "kind": "color",
    "label": "Color 1",
  },
  {
    "default": "#6a3df0",
    "group": "Fill",
    "key": "fill.b",
    "kind": "color",
    "label": "Color 2",
  },
  {
    "default": 20,
    "group": "Style",
    "key": "style.grain",
    "kind": "slider",
    "label": "Grain",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Style",
    "key": "style.distortion",
    "kind": "slider",
    "label": "Distortion",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": "#000000",
    "group": "Style",
    "key": "style.background",
    "kind": "color",
    "label": "Background",
  },
]
`;
